--- a/analysis/exploreData.Rmd
+++ b/analysis/exploreData.Rmd
@@ -209,15 +209,53 @@ p
 As we are comparing immune cells, we expect GO categories related to the immune system and its processes to be highly ranked. To evalue this, we downloaded all of the child terms for the GO category "immune system process" (GO:002376) from AminGO 2;  [http://amigo.geneontology.org/amigo/term/GO:0002376](http://amigo.geneontology.org/amigo/term/GO:0002376). 
 
 ```{r, fig.width=7}
-immuneGO <- unique(read.csv(here("data/GO-immune-system-process.txt"), 
-                            stringsAsFactors = FALSE, header = FALSE, 
+immuneGO <- unique(read.csv(here("data/GO-immune-system-process.txt"),
+                            stringsAsFactors = FALSE, header = FALSE,
                             col.names = "GOID"))
+
+# immuneGO <- NULL
+# 
+# for(i in 1:ncol(cont.matrix)){
+#     tmp <- read.csv(here(glue("code/{colnames(cont.matrix)[i]}.GO.csv")), 
+#                          stringsAsFactors = FALSE)
+#     immuneGO <- bind_rows(immuneGO, data.frame("GOID" = tmp$X[1:100],
+#                                                contrast = colnames(cont.matrix)[i]))
+# }
 
 dat %>% filter(set == "GO") %>%
     filter(sub %in% c("n","c1")) %>% 
     arrange(contrast, method, pvalue) %>%
     group_by(contrast, method) %>%
-    mutate(csum = cumsum(ID %in% immuneGO$GOID)) %>%
+    mutate(csum = cumsum(ID %in% immuneGO$GOID)) %>% #[immuneGO$contrast == contrast])) %>%
+    mutate(rank = 1:n()) %>%
+    filter(rank <= 100) -> sub
+
+p <- ggplot(sub, aes(x = rank, y = csum, colour = method)) +
+    geom_line() +
+    facet_wrap(vars(contrast), ncol=3) +
+    geom_vline(xintercept = 10, linetype = "dotted") +
+    labs(colour = "Method", x = "Rank", y = "Cumulative no. immune sets") +
+    theme(legend.position = "bottom")
+p
+```
+
+Examine results when top ranked 100 GO terms from RNA-seq analysis of the same cell type comparisons is used as "truth".
+
+```{r, fig.width=7}
+immuneGO <- NULL
+
+for(i in 1:ncol(cont.matrix)){
+    tmp <- read.csv(here(glue("code/{colnames(cont.matrix)[i]}.GO.csv")),
+                         stringsAsFactors = FALSE)
+    immuneGO <- bind_rows(immuneGO, data.frame("GOID" = tmp$X[1:100],
+                                               contrast = colnames(cont.matrix)[i]))
+}
+
+dat %>% filter(set == "GO") %>%
+    filter(sub %in% c("n","c1")) %>% 
+    arrange(contrast, method, pvalue) %>%
+    group_by(contrast, method) %>%
+    mutate(csum = cumsum(ID %in% immuneGO$GOID[immuneGO$contrast == contrast])) %>%
     mutate(rank = 1:n()) %>%
     filter(rank <= 100) -> sub
 
@@ -330,6 +368,35 @@ p <- ggplot(sub, aes(x = rank, y = csum, colour = method)) +
 p
 ```
 
+Examine results when top ranked 100 KEGG pathways from RNA-seq analysis of the same cell type comparisons is used as "truth".
+
+```{r, fig.width=7}
+immuneKEGG <- NULL
+
+for(i in 1:ncol(cont.matrix)){
+    tmp <- read.csv(here(glue("code/{colnames(cont.matrix)[i]}.KEGG.csv")),
+                         stringsAsFactors = FALSE)
+    immuneKEGG <- bind_rows(immuneKEGG, data.frame("PID" = tmp$X[1:100],
+                                               contrast = colnames(cont.matrix)[i]))
+}
+
+dat %>% filter(set == "KEGG") %>%
+    filter(sub %in% c("n","c1")) %>% 
+    arrange(contrast, method, pvalue) %>%
+    group_by(contrast, method) %>%
+    mutate(csum = cumsum(ID %in% immuneKEGG$PID[immuneKEGG$contrast == contrast])) %>%
+    mutate(rank = 1:n()) %>%
+    filter(rank <= 50) -> sub
+
+p <- ggplot(sub, aes(x = rank, y = csum, colour = method)) +
+    geom_line() +
+    facet_wrap(vars(contrast), ncol=3, scales = "free_y") +
+    geom_vline(xintercept = 10, linetype = "dotted") +
+    labs(colour = "Method", x = "Rank", y = "Cumulative no. immune sets") +
+    theme(legend.position = "bottom")
+p
+```
+
 Examine what the top 10 ranked gene sets are and how many genes they contain, for each method and comparison.
 
 ```{r, fig.height=11, fig.width=6}
@@ -403,7 +470,35 @@ ggplot(sub, aes(pvalue, fill = method)) +
 
 ## Test BROAD gene sets
 
-As the ebGSEA method from the ChAMP package only allows testing of their in-built database of Broad Institute gene sets, we will compare to other methods by testing these same gene sets. Note, As methylRRA (GSEA) consistenly performed very poorly in previous comparisons, it is being omitted from the following results.  
+As the ebGSEA method from the ChAMP package only allows testing of their in-built database of Broad Institute gene sets, we will compare to other methods by testing these same gene sets. 
+
+```{r, fig.width=7}
+immuneBROAD <- NULL
+
+for(i in 1:ncol(cont.matrix)){
+    tmp <- read.csv(here(glue("code/{colnames(cont.matrix)[i]}.BROAD.csv")),
+                         stringsAsFactors = FALSE)
+    tmp <- tmp[order(tmp$PValue),]
+    immuneBROAD <- bind_rows(immuneBROAD, data.frame("ID" = tmp$X[1:100],
+                                               contrast = colnames(cont.matrix)[i]))
+}
+
+dat %>% filter(set == "BROAD") %>%
+    filter(sub %in% c("n","c1")) %>% 
+    arrange(contrast, method, pvalue) %>%
+    group_by(contrast, method) %>%
+    mutate(csum = cumsum(ID %in% immuneBROAD$ID[immuneBROAD$contrast == contrast])) %>%
+    mutate(rank = 1:n()) %>%
+    filter(rank <= 100) -> sub
+
+p <- ggplot(sub, aes(x = rank, y = csum, colour = method)) +
+    geom_line() +
+    facet_wrap(vars(contrast), ncol=3, scales = "free_y") +
+    geom_vline(xintercept = 10, linetype = "dotted") +
+    labs(colour = "Method", x = "Rank", y = "Cumulative no. immune sets") +
+    theme(legend.position = "bottom")
+p
+```
 
 ```{r, fig.height=15, fig.width=6}
 data(PathwayList)
