--- a/analysis/exploreData.Rmd
+++ b/analysis/exploreData.Rmd
@@ -233,20 +233,16 @@ p
 Examine results when top ranked 100 GO terms from RNA-seq analysis of the same cell type comparisons is used as "truth".
 
 ```{r, fig.width=7}
-immuneGO <- NULL
-
-for(i in 1:ncol(cont.matrix)){
-    tmp <- read.csv(here(glue("code/{colnames(cont.matrix)[i]}.GO.csv")),
-                         stringsAsFactors = FALSE)
-    immuneGO <- bind_rows(immuneGO, data.frame("GOID" = tmp$X[1:100],
-                                               contrast = colnames(cont.matrix)[i]))
-}
-
+immuneGO <- readRDS(here("data/RNAseq-GO.rds"))
+immuneGO %>% group_by(contrast) %>%
+    mutate(rank = 1:n()) %>%
+    filter(rank <= 100) -> topSets
+    
 dat %>% filter(set == "GO") %>%
     filter(sub %in% c("n","c1")) %>% 
     arrange(contrast, method, pvalue) %>%
     group_by(contrast, method) %>%
-    mutate(csum = cumsum(ID %in% immuneGO$GOID[immuneGO$contrast %in% contrast])) %>%
+    mutate(csum = cumsum(ID %in% topSets$GOID[topSets$contrast %in% contrast])) %>%
     mutate(rank = 1:n()) %>%
     filter(rank <= 100) -> sub
 
@@ -254,7 +250,8 @@ p <- ggplot(sub, aes(x = rank, y = csum, colour = method)) +
     geom_line() +
     facet_wrap(vars(contrast), ncol=3) +
     geom_vline(xintercept = 10, linetype = "dotted") +
-    labs(colour = "Method", x = "Rank", y = "Cumulative no. immune sets") +
+    labs(colour = "Method", x = "Rank", 
+         y = glue("Cumulative no. RNAseq sets")) +
     theme(legend.position = "bottom")
 p
 ```
@@ -362,20 +359,16 @@ p
 Examine results when top ranked 100 KEGG pathways from RNA-seq analysis of the same cell type comparisons is used as "truth".
 
 ```{r, fig.width=7}
-immuneKEGG <- NULL
-
-for(i in 1:ncol(cont.matrix)){
-    tmp <- read.csv(here(glue("code/{colnames(cont.matrix)[i]}.KEGG.csv")),
-                         stringsAsFactors = FALSE)
-    immuneKEGG <- bind_rows(immuneKEGG, data.frame("PID" = tmp$X[1:100],
-                                               contrast = colnames(cont.matrix)[i]))
-}
+immuneKEGG <- readRDS(here("data/RNAseq-KEGG.rds"))
+immuneKEGG %>% group_by(contrast) %>%
+    mutate(rank = 1:n()) %>%
+    filter(rank <= 100) -> topSets
 
 dat %>% filter(set == "KEGG") %>%
     filter(sub %in% c("n","c1")) %>% 
     arrange(contrast, method, pvalue) %>%
     group_by(contrast, method) %>%
-    mutate(csum = cumsum(ID %in% immuneKEGG$PID[immuneKEGG$contrast %in% contrast])) %>%
+    mutate(csum = cumsum(ID %in% topSets$PID[topSets$contrast %in% contrast])) %>%
     mutate(rank = 1:n()) %>%
     filter(rank <= 100) -> sub
 
@@ -383,7 +376,7 @@ p <- ggplot(sub, aes(x = rank, y = csum, colour = method)) +
     geom_line() +
     facet_wrap(vars(contrast), ncol=3, scales = "free_y") +
     geom_vline(xintercept = 10, linetype = "dotted") +
-    labs(colour = "Method", x = "Rank", y = "Cumulative no. immune sets") +
+    labs(colour = "Method", x = "Rank", y = "Cumulative no. RNAseq sets") +
     theme(legend.position = "bottom")
 p
 ```
@@ -464,21 +457,16 @@ ggplot(sub, aes(pvalue, fill = method)) +
 As the ebGSEA method from the ChAMP package only allows testing of their in-built database of Broad Institute gene sets, we will compare to other methods by testing these same gene sets. 
 
 ```{r, fig.width=7}
-immuneBROAD <- NULL
-
-for(i in 1:ncol(cont.matrix)){
-    tmp <- read.csv(here(glue("code/{colnames(cont.matrix)[i]}.BROAD.csv")),
-                         stringsAsFactors = FALSE)
-    tmp <- tmp[order(tmp$PValue),]
-    immuneBROAD <- bind_rows(immuneBROAD, data.frame("ID" = tmp$X[1:100],
-                                               contrast = colnames(cont.matrix)[i]))
-}
+immuneBROAD <- readRDS(here("data/RNAseq-BROAD.rds"))
+immuneBROAD %>% group_by(contrast) %>%
+    mutate(rank = 1:n()) %>%
+    filter(rank <= 100) -> topSets
 
 dat %>% filter(set == "BROAD") %>%
     filter(sub %in% c("n","c1")) %>% 
     arrange(contrast, method, pvalue) %>%
     group_by(contrast, method) %>%
-    mutate(csum = cumsum(ID %in% immuneBROAD$ID[immuneBROAD$contrast %in% contrast])) %>%
+    mutate(csum = cumsum(ID %in% topSets$ID[topSets$contrast %in% contrast])) %>%
     mutate(rank = 1:n()) %>%
     filter(rank <= 100) -> sub
 
