--- a/analysis/expressionGenesets.Rmd
+++ b/analysis/expressionGenesets.Rmd
@@ -15,6 +15,10 @@ library(limma)
 library(edgeR)
 library(EGSEA)
 library(EGSEAdata)
+library(glue)
+library(patchwork)
+library(biobroom)
+library(ChAMP)
 ```
 
 # Data import
@@ -30,7 +34,7 @@ targets$Cell_type <- gsub("-", "_", targets$Cell_type)
 targets
 ```
 
-```{r, echo=FALSE}
+```{r}
 files <- list.files(here("data/SRP125125/quants"), 
                     recursive = TRUE, pattern = "quant.sf", full.names = TRUE)
 names(files) <- substr(strsplit2(files, "/")[,10], 1, 10)
@@ -38,7 +42,7 @@ names(files) <- substr(strsplit2(files, "/")[,10], 1, 10)
 
 Associate transcripts with gene IDs for gene-level summarization.
 
-```{r, echo=FALSE}
+```{r}
 edb <- EnsDb.Hsapiens.v75
 tx2gene <- transcripts(edb, columns = c("tx_id", "gene_id"), 
                        return.type = "DataFrame")
@@ -47,7 +51,7 @@ tx2gene
 
 Import gene-level counts and abundances.
 
-```{r, echo=FALSE}
+```{r}
 txiG <- tximport(files, type = "salmon", tx2gene = tx2gene, 
                   countsFromAbundance = "lengthScaledTPM", 
                   ignoreTxVersion = TRUE)
@@ -57,7 +61,7 @@ head(txiG$counts)
 
 Set up `DGElist` object for downstream analysis.
 
-```{r, echo=FALSE}
+```{r}
 z <- DGEList(txiG$counts)
 z$genes <- ensembldb::genes(edb, filter = GeneIdFilter(rownames(z)), 
                  columns = c("gene_id", "symbol", "entrezid"), 
@@ -75,7 +79,7 @@ Genes that do not have an adequate number of reads in any sample should be filte
 
 Filter out lowly expressed genes and calculate TMM normalisation factors.
 
-```{r, echo=FALSE}
+```{r}
 keep <- filterByExpr(z, group = z$group)
 x <- z[keep, ]
 y <- calcNormFactors(x)
@@ -84,84 +88,72 @@ y
 
 Plotting the distribution log-CPM values shows that a majority of genes within each sample are either not expressed or lowly-expressed with log-CPM values that are small or negative.
 
-```{r, echo=FALSE}
+```{r, fig.width=9}
 L <- mean(z$samples$lib.size) * 1e-6
 M <- median(z$samples$lib.size) * 1e-6
 
-par(mfrow=c(1,2))
-lcpmz <- cpm(z, log = TRUE)
-lcpm.cutoff <- log2(10/M + 2/L)
-nsamples <- ncol(z)
-col <- paletteer_d("Polychrome::dark", 24)
-plot(density(lcpmz[,1]), col=col[1], lwd=2, ylim=c(0,0.75), las=2, main="", xlab="")
-title(main="Unfiltered data", xlab="Log-cpm")
-abline(v=lcpm.cutoff, lty=3)
-for (i in 2:nsamples){
-  den <- density(lcpmz[,i])
-  lines(den$x, den$y, col=col[i], lwd=2)
-}
+dat <- tidy(z, addSamples = TRUE)
+dat$cpm <- reshape2::melt(cpm(z, log = TRUE), value.name = "cpm")$cpm
+p1 <- ggplot(dat, aes(x = cpm, colour = group)) +
+    geom_density() +
+    labs(colour = "Cell Type", x = "Log CPM", y = "Density", 
+         title = "Unfiltered") +
+    geom_vline(xintercept = log2(10/M + 2/L), linetype = "dashed")
 
-lcpmy <- cpm(y, log=TRUE)
-plot(density(lcpmy[,1]), col=col[1], lwd=2, ylim=c(0,0.15), las=2, main="", xlab="")
-title(main="Filtered data", xlab="Log-cpm")
-abline(v=lcpm.cutoff, lty=3)
-for (i in 2:nsamples){
-  den <- density(lcpmy[,i])
-  lines(den$x, den$y, col=col[i], lwd=2)
-}
+dat <- tidy(y, addSamples = TRUE)
+dat$cpm <- reshape2::melt(cpm(y, log = TRUE), value.name = "cpm")$cpm
+p2 <- ggplot(dat, aes(x = cpm, colour = group)) +
+    geom_density() +
+    labs(colour = "Cell Type", x = "Log CPM", y = "Density",
+         title = "Filtered") +
+    geom_vline(xintercept = log2(10/M + 2/L), linetype = "dashed")
+
+p1 + p2 + plot_layout(guides = "collect")
 ```
 
 
-```{r, fig.height=8, fig.width=9, echo=FALSE}
-pal <- paletteer_d("LaCroixColoR::paired", 14)
+```{r, fig.width=9}
+dat <- tidy(y, addSamples = TRUE)
+p1 <- ggplot(dat, aes(x = sample, y = lib.size, fill = group)) +
+    geom_bar(stat = "identity") +
+    labs(fill = "Cell Type", x = "Sample", y = "Library Size") +
+    theme(axis.text.x = element_text(angle = 45, hjust = 1, size = 7))
 
-par(mar=c(5,6,4,2)+0.1, mfrow=c(2,2))
-barplot(y$samples$lib.size, col=pal[factor(targets$Cell_type)], cex.names = 0.8, 
-        names.arg = colnames(y), las = 2, main = "Library size", yaxt = "none")
-aty <- seq(0, 14000000, by = 2000000)
-axis(2, at=aty, labels=format(aty, scientific=FALSE), las=2, cex = 0.8)
-legend("topright", legend = levels(factor(targets$Cell_type)), fill = pal)
+dat$cpm <- reshape2::melt(cpm(y, log = TRUE), value.name = "cpm")$cpm
+p2 <- ggplot(dat, aes(x = sample, y = cpm, fill = group)) +
+    geom_boxplot(show.legend = FALSE) +
+    labs(x = "Sample", y = "CPM") +
+    theme(axis.text.x = element_text(angle = 45, hjust = 1, size = 7))
 
-par(mar=c(5,3,4,2)+0.1)
-boxplot(cpm(x, log=TRUE), las=2, col=pal[factor(targets$Cell_type)], 
-        main="Unnormalised log2 CPM")
-legend("topright", legend = levels(factor(targets$Cell_type)), fill = pal)
-
-par(mar=c(5,3,4,2)+0.1)
-boxplot(cpm(y, log=TRUE), las=2, col=pal[factor(targets$Cell_type)], 
-        main="Normalised log2 CPM")
-legend("topright", legend = levels(factor(targets$Cell_type)), fill = pal)
-
+p1 + p2 + plot_layout(guides = "collect")
 ```
 
 Multi-dimensional scaling (MDS) plots show the largest sources of variation in the data. They are a good way of exploring the relationships between the samples and identifying structure in the data. The following series of MDS plots examines the first four principal components. The samples are coloured by various known features of the samples such as CMV result and foetal sex. The MDS plots do not show the samples obviously clustering by any of the known features of the data. This indicates that we are unlikely to find many differentially expressed genes between CMV and normal samples.
 
-```{r, fig.height=8, fig.width=9, echo=FALSE}
+```{r, fig.height=8, fig.width=9}
 lcpm <- cpm(y, log = TRUE)
+dims <- list(c(1,2), c(1,3), c(2,3), c(3,4))
+p <- vector("list", length(dims))
 
-par(mfrow=c(2,2), oma = c(0,0,2,0))
-plotMDS(lcpm, gene.selection = "common", pch = 19,
-        col = pal[factor(targets$Cell_type)])
-legend("topleft", legend = levels(factor(targets$Cell_type)), text.col = pal,
-       cex = 0.7)
-plotMDS(lcpm, gene.selection = "common", pch = 19,
-        col = pal[factor(targets$Cell_type)], dim.plot = c(1,3))
-legend("topright", legend = levels(factor(targets$Cell_type)), text.col = pal,
-       cex = 0.7)
-plotMDS(lcpm, gene.selection = "common", pch = 19,
-        col = pal[factor(targets$Cell_type)], dim.plot = c(2,3))
-legend("topright", legend = levels(factor(targets$Cell_type)), text.col = pal,
-       cex = 0.7)
-plotMDS(lcpm, gene.selection = "common", pch = 19,
-        col = pal[factor(targets$Cell_type)], dim.plot = c(3,4))
-legend("topleft", legend = levels(factor(targets$Cell_type)), text.col = pal,
-       cex = 0.7)
+for(i in 1:length(dims)){
+    tmp <- plotMDS(lcpm, top=1000, gene.selection="common", plot = FALSE,
+                   dim.plot = dims[[i]])
+    
+    dat <-data.frame(x = tmp$x, y = tmp$y, cellType = targets$Cell_type)
+    p[[i]] <- ggplot(dat, aes(x = x, y = y, colour = cellType)) +
+        geom_point() +
+        labs(colour = "Cell Type", x = glue("PC {tmp$dim.plot[1]}"),
+             y = glue("PC {tmp$dim.plot[2]}"))
+    
+}
+
+(p[[1]] | p[[2]]) / (p[[3]] | p[[4]]) + plot_layout(guides = "collect")
 ```
 
 # Differential expression analysis
 The TMM normalised data was transformed using `voomWithQualityWeights`. This takes into account the differing library sizes and the mean variance relationship in the data as well as calculating sample-specific quality weights. Linear models were fit in `limma`, taking into account the `voom` weights. 
 
-```{r, echo=FALSE}
+```{r}
 design <- model.matrix(~0+y$samples$group, data = targets)
 colnames(design) <- c(levels(factor(y$samples$group)))
 v <- voomWithQualityWeights(y, design, plot = TRUE)
@@ -179,36 +171,50 @@ summary(decideTests(fit2, p.value = 0.05))
 
 Testing for enrichment of GO categories and KEGG pathways amongst statistically significant differentially expressed genes.
 
-```{r, echo=FALSE}
+```{r}
+go <- NULL
+kegg <- NULL
+
 for(i in 1:ncol(cont)){
     top <- topTable(fit2, coef = i, p.value = 0.05, number = Inf)
     
-    go <- goana(top$entrezid, universe = y$genes$entrezid, trend = "length")
-    go <- topGO(go, number = Inf)
-    go$FDR <- p.adjust(go$P.DE)
-    write.csv(go, here(glue("code/{colnames(cont)[i]}.GO.csv")))
-    
-    kegg <- kegga(top$entrezid, universe = y$genes$entrezid, trend="length")
-    kegg <- topKEGG(kegg, number = Inf)
-    kegg$FDR <- p.adjust(kegg$P.DE)
-    write.csv(kegg, here(glue("code/{colnames(cont)[i]}.KEGG.csv")))
+    tmp <- goana(top$entrezid, universe = y$genes$entrezid, trend = "length")
+    tmp <- topGO(tmp, number = Inf)
+    tmp$FDR <- p.adjust(tmp$P.DE)
+    tmp <- rownames_to_column(tmp, var = "ID")
+    tmp$contrast <- colnames(cont)[i] 
+    go <- bind_rows(go, tmp)
+        
+    tmp <- kegga(top$entrezid, universe = y$genes$entrezid, trend="length")
+    tmp <- topKEGG(tmp, number = Inf)
+    tmp$FDR <- p.adjust(tmp$P.DE)
+    tmp <- rownames_to_column(tmp, var = "PID")
+    tmp$contrast <- colnames(cont)[i] 
+    kegg <- bind_rows(kegg, tmp)
 }
+
+saveRDS(go, here(glue("data/RNAseq-GO.rds")))
+saveRDS(kegg, here(glue("data/RNAseq-KEGG.rds")))
 ```
 
 Test whether any of the genes in the BROAD sets are differentially expressed.
 
 ```{r}
-library(ChAMP)
 data(PathwayList)
-
 keep <- sapply(PathwayList, function(x) any(x %in% z$genes$symbol))
 idx <- suppressMessages(lapply(PathwayList[keep], function(x){
     tmp <- z$genes$gene_id[z$genes$symbol %in% x]
     tmp[!is.na(tmp)]
 }))
-  
+
+broad <- NULL  
 for(i in 1:ncol(cont)){
-    broad <- fry(v, index = idx, design = design, contrast = cont.matrix[,i])
-    write.csv(broad, here(glue("code/{colnames(cont)[i]}.BROAD.csv")))
+    tmp <- camera(v, index = idx, design = design, contrast = cont[,i],
+                  trend.var = TRUE)
+    tmp <- rownames_to_column(tmp, var = "ID")
+    tmp$contrast <- colnames(cont)[i] 
+    broad <- bind_rows(broad, tmp)
 }
+
+saveRDS(broad, here("data/RNAseq-BROAD.rds"))
 ```
